src/test/ui/parser/fn-colon-return-type.rs
fn foo(x: i32): i32 { //~ ERROR expected one of `->`, `;`, `where`, or `{`, found `:`
    x
}

fn main() {}
